fixed the empty spacing class and added in the send button

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -29,17 +29,32 @@ body{
 		text-align: $center;
 	}
 
+	.col-2 {
+		width: 11.716%;		
+		background: none;
+	}
+
 	.input-field {
 		text-align: $center;
 
 		input{
-			width: 300px;
+			width: 390px;
     		height: 50px;
-    		border-color: $background-blue-start;
+    		border-color: #7683F2;
     		border-style: solid;
     		font-size: 28px;
-			font-family: 'Open Sans Light 300', 'Helvetica', 'Arial'; 
-			margin-left: 8px;
+    		font-family: 'Open Sans Light 300', 'Helvetica', 'Arial';
+    		margin-left: 20px;
+		}
+	}
+
+	.send-btn {
+		background-color: $black;
+		margin-left: -2px;
+
+		p {
+			margin: 0px;
+    		padding: 19px;
 		}
 	}
 
